# robot-self-evolution

./: README.md  pyproject.toml
configs/: cloud.example.yaml  demo.yaml  llm.example.yaml
docs/: collaborator-integration-playbook.md  http-grpc-placeholder-guide.md  interface-spec-v1.md  llm-integration-qwen-vl.md  project-architecture.md  rl-module-integration.md
scripts/: integration_stub_example.py  llm_smoke_test.py  run_demo.py  run_sim_runtime_demo.py
src/rse/: main.py
src/rse/adapters/: llm_client.py  llm_judge.py  llm_planner.py  navigation_tool.py  rl_contracts.py  rl_trainer.py  rl_trainer_cloud.py  sim_env.py  sim_env_cloud.py  vla_manipulation.py
src/rse/core/: models.py
src/rse/loop/: evolution.py  judge.py  pipeline.py  runtime.py  stats.py  trigger.py
tests/: test_trigger.py
