[project]
name = "robot-self-evolution"
version = "0.1.0"
description = "Self-evolving robotic pipeline for long-horizon tasks (simulation-first)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0"
]

[project.scripts]
rse-demo = "rse.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
